<resources>
    <string name="app_name">ServiApp</string>
    <!-- Strings related to login -->
    <string name="usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="switchTienda">Perfil Tienda</string>
    <string name="inicio_sesion">Iniciar sesión o registrarse</string>
    <string name="inicio_sesion_corto">Iniciar sesión</string>
    <string name="bienvenido">"Bienvenido !"</string>
    <string name="invalid_username">Nombre de usuario no válido</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="favoritos">Favoritos</string>
    <string name="buscar_servicios">Buscar servicios</string>
    <string name="ver_mapa">Ver Mapa</string>
    <string name="recibir_notificaciones">Recibir notificaciones</string>
    <string name="zona_de_trabajo">Zona de trabajo:</string>

    <string name="editar_perfil">Editar perfil</string>
    <string name="notificacion_push">Enviar notificacion push</string>

    <string name="nombre_tienda">Nombre tienda: </string>
    <string name="rubro">Rubro: </string>
    <string name="calificacion">Calificación: </string>
    <string name="telefono">Teléfono: </string>
    <string name="hora_inicio"> 08:30 </string>
    <string name="hora_fin"> 17:30 </string>
    <string name="filtrar">Filtrar </string>

    <string name="texto_notificacion"> Texto notificación: </string>
    <string name="tipo_notificacion"> Tipo notificación: </string>
    <string name="enviar">Enviar</string>
    <string name="cancelar">Cancelar</string>
    <string name="default_notification_channel_id">1001</string>
    <string name="msg_subscribed">3</string>
    <string name="msg_subscribe_failed">9</string>
    <string name="CHANNEL_ID">1001</string>

    <string-array name="tipoNotificacion">
        <item>Oferta</item>
        <item>Cambio de horario</item>
    </string-array>

</resources>
