<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <Button
            android:id="@+id/btnFavoritos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/favoritos" />

        <Button
            android:id="@+id/btnBuscarServicios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buscar_servicios" />

        <Button
            android:id="@+id/btnVerMapa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ver_mapa" />

        <Switch
            android:id="@+id/switchNotificaciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recibir_notificaciones" />
    </LinearLayout>

</LinearLayout>