<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ListaFavorios">

    <!--<androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarListFavoritos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="Lista de favoritos"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nombreTienda"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/nombre_tienda" />

            <EditText
                android:id="@+id/editNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Tienda"
                android:inputType="textPersonName" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/rubro"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/rubro" />

            <Spinner
                android:id="@+id/r_rubro"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:tooltipText="Todos"/>

        </LinearLayout>

        <Button
            android:id="@+id/btnFiltrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:text="@string/filtrar" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/CardRecycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />


</LinearLayout>