<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

    <TextView
        android:id="@+id/textNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Nombre de la tienda" />

    <EditText
        android:id="@+id/ep_nombreTienda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/txtRubro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rubro" />

    <Spinner
        android:id="@+id/ep_rubro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txt_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telefono" />

    <EditText
        android:id="@+id/ep_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone" />

    <TextView
        android:id="@+id/txt_horario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Horario de atencion:" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_desde"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="Desde:" />

        <EditText
            android:id="@+id/ep_horainicio"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time" />

        <TextView
            android:id="@+id/txt_hasta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="hasta: " />

        <EditText
            android:id="@+id/ep_horafin"
            android:layout_width="130dp"
            android:layout_height="wrap_content"

            android:ems="10"
            android:inputType="time" />

    </LinearLayout>

    <TextView
        android:id="@+id/txt_direccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Direccion:" />

    <EditText
        android:id="@+id/ep_direccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_servicios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="Servicios:" />

        <Button
            android:id="@+id/btn_agregarservicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+" />

    </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ep_CardServicios"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/ep_imagen"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:scaleType="centerCrop"
        tools:srcCompat="@tools:sample/avatars[2]" />

    <Button
        android:id="@+id/ep_btn_cargarfoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Cargar foto" />

    <Button
        android:id="@+id/ep_btn_zonatrabajo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zona_de_trabajo" />

    <Button
        android:id="@+id/ep_btn_guardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Guardar perfil" />

    </LinearLayout>
</ScrollView>